Slider Widget: Prevent Misalignment If Link Is Present
Link can be by Destination URL or lightbox.

--- a/widgets/slider/styles/default.less
+++ b/widgets/slider/styles/default.less
@@ -46,10 +46,16 @@
 				}
 			}
 
-			.sow-slider-image-foreground-wrapper {
-				line-height: 0;
-				margin-left: auto;
+			& > a {
+				display: block;
+				width: 100%;
+			}
+
+			.sow-slider-image-foreground-wrapper,
+			& > a .sow-slider-foreground-image  {
+				display: block;
 				margin-right: auto;
+				margin-left: auto;
 			}
 		}
 
